@@ -2,6 +2,7 @@ Cacti CHANGELOG
 
 1.2.24
 -issue#5127: Importing Local_Linux_Machine.xml.gz template raises PHP error
+-issue#5134: Display of "Memory Limit" on Boost Status page shows -1 and not "Unlimited"
 -issue#5135: Error in using RRDcleaner an RRDcheck causing SQL errors
 -issue#5137: When attempting to update structured paths, SQL errors occur
 
